Fixed beta-warning spacing on homepage.

--- a/styles/home.css
+++ b/styles/home.css
@@ -3,6 +3,9 @@
 complimentary greens: 9FB553    7B8851    61761B    C6DA82    CCDA99
 
 */
+body #head-beta-warning + #head-nav + #intro {
+    margin-top:2em;
+}
 #intro {
     background:#444449;
     box-shadow:inset 0 0 2em rgba(0,0,0,.375);
